--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</head> 
+</head>
 <!-- Navegação -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
@@ -24,10 +25,75 @@
         </div>
     </div>
 </nav>
+<!--Cabeçalho-->
 <header class="hero text-center">
     <div class="container">
-        <img src="https://via.placeholder.com/150" alt="Minha Foto">
+        <img src="../menu/assets/img/cj-gta.gif" alt="Minha Foto">
         <h1 class="mt-3">Sadraque</h1>
         <p>Desenvolvedor Web | Designer | Freelancer</p>
     </div>
 </header>
+<!-- Sobre Mim -->
+<section id="about" class="container text-center">
+    <h2 class="section-title">Sobre Mim</h2>
+    <p>Sou um desenvolvedor apaixonado por tecnologia e design. Trabalho com HTML, CSS, JavaScript e Bootstrap para
+        criar interfaces incríveis.</p>
+</section>
+<!-- Projetos -->
+<section id="projects" class="container text-center">
+    <h2 class="section-title">Meus Projetos</h2>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 1">
+                <div class="card-body">
+                    <h5 class="card-title">Projeto 1</h5>
+                    <p class="card-text">Descrição breve do projeto.</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 2">
+                <div class="card-body">
+                    <h5 class="card-title">Projeto 2</h5>
+                    <p class="card-text">Descrição breve do projeto.</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 3">
+                <div class="card-body">
+                    <h5 class="card-title">Projeto 3</h5>
+                    <p class="card-text">Descrição breve do projeto.</p>
+                    <a href="#" class="btn btn-primary">Ver mais</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- Contato -->
+<section id="contact" class="contact text-center">
+    <div class="container">
+        <h2 class="section-title">Entre em Contato</h2>
+        <p>Preencha o formulário abaixo para falar comigo.</p>
+        <form>
+            <div class="mb-3">
+                <input type="text" class="form-control" placeholder="Seu Nome" required>
+            </div>
+            <div class="mb-3">
+                <input type="email" class="form-control" placeholder="Seu Email" required>
+            </div>
+            <div class="mb-3">
+                <textarea class="form-control" rows="4" placeholder="Sua Mensagem" required></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+    </div>
+</section>
+<footer>
+    <p>&copy; 2024 Meu Nome | Todos os direitos reservados.</p>
+</footer>
